se agregan tablas

--- a/Index.html
+++ b/Index.html
@@ -10,5 +10,71 @@
     <h2>Los Planetas</h2>
     <h3>La Tierra</h3>
     <p>La Tierra es redonda</p>
+    <img src="Planeta tierra.jpg"widght"="300"height"150"alt=El planeta tierra">
+    
+
+
+    <Table border ="1">
+        <caption> Tabla de alumnos</caption>
+        <tr>
+            <td>Nombre</td>
+                <td>Apellido</td>
+                    <td>Nota</td>
+        </tr>
+        <tr>
+            <td>Carlos</td>
+            <td>Rodriguez</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>Aldo</td>
+            <td>Sanchez</td>
+            <td>8</td>
+        </tr>
+    </Table>
+
+
+
+    
+        <table border="1">
+            <caption><b>Tipos de barcos</b></caption>   
+            <tr>
+             <td></td>   
+            <td><i>Pesqueros</i></td>
+            <td><i></i>De recreo</i></td>
+            <td><i></i>De carga</i></td>
+            </tr>
+            <tr>
+                <td rowspan ="3">Clases</td>
+                <td>Crucero de pesca <img src="Crucero de pesca.jpg" width="50" height="50"></td>
+                <td>Velero <img src="velero.jpg" width="50" height="50"></td>
+                <td>Buque de carga general <img src="buque de carga general.jpg" width="50" height="50"></td>
+            </tr>
+            <tr>
+                <td><a href="https://www.cosasdebarcos.com/recursos/tipos-de-barcos-de-pesca/"> Catamarán</a></td>
+                <td><a href="https://www.neptuno.es/embarcaciones-y-sus-titulaciones">Yate</a></td>
+                <td><a href="https://cotransagroup.com/que-tipos-de-buques-existen-en-el-transporte-maritimo/">Buque Portacontenedor</a></td>                
+            </tr>
+            <tr>
+                <td>Barco cabinado pequeño</td>
+                <td>Lancha</td>
+                <td>Buque Granelero</td>
+            </tr>  
+            <tr>
+                <td colspan ="4"> Otros tipos de barcos </td>
+            </tr>
+            <tr>
+                <td colspan ="4">
+                    <ul>
+                <li>Barcos de investigación</li>
+                <li>Barcos de crucero</li>
+                <li>Barcos de travesía</li>
+            </ul>
+        </td>
+            </tr>    
+        </table>  
 </body>
+
+
+
 </html>
