se agrea lista desordenada y redirección

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,25 @@
     <title>Comision B</title>
 </head>
 <body>
+    <header>
+        <ul>
+                <li>Inicio</li>
+                <li><a href="./Contactos.html">Contactos</a></li>
+                <li><a href="./Horario.html">Horarios de contacto</a></li>
+                <li><a href="#sectionid">Direcciones</a></li>
+                <li>Blog</li>
+            </ul>
+
+        </header>
+                <main>
+                    
+                    
+                    <section id="sectionid">
+                        <h5>Travesera de Gracia 89, Ciudad Autónoma de Buenos Aires, Argentina</h5>
+                        </section>
+                    <section id="sectionid">
+                         <h5>Los días feriados no trabajamos</h5>
+                </section>
     <h1>Sistema Solar</h1> 
     <h2>Los Planetas</h2>
     <h3>La Tierra</h3>
@@ -73,8 +92,11 @@
         </td>
             </tr>    
         </table>  
+
+
+</main>
+
 </body>
 
-
-
 </html>
+
