se agregabarra de navegación, pie de página y sección

--- a/Index.html
+++ b/Index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <header>
-        <ul>
+        <nav>
+            <ul>
                 <li>Inicio</li>
                 <li><a href="./Contactos.html">Contactos</a></li>
                 <li><a href="./Horario.html">Horarios de contacto</a></li>
                 <li><a href="#sectionid">Direcciones</a></li>
                 <li>Blog</li>
             </ul>
+            </nav>
 
         </header>
                 <main>
@@ -95,6 +97,9 @@
 
 
 </main>
+<footer>
+    <p>Derechos de autor pertenecientes a Laura Dávila</p>
+</footer>
 
 </body>
 
