se agrega color a días y horarios

--- a/Horario.html
+++ b/Horario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,12 @@
             </ul>
             </nav>
         </header>
-    <h1>Lunes a viernes: 8:00 a 13:00 y 16:00 a 18:00</h1>   
+    <b class="dia1">Lunes: </b><i class="horarios1">8:00 a 13:00, </i>
+        <b class="dia2">Martes: </b><i class="horarios2">16:00 a 18:00, </i>
+            <b class="dia3">Miércoles: </b><i class="horarios3">8:00 a 13:00, </i>
+                <b class="dia4">Jueves: </b><i class="horarios4">16:00 a 18:00 y </i> 
+                    <b class="dia5">viernes: </b><i class="horarios5">16:00 a 18:00</i>
+          
     <footer>
         <p>Derechos de autor pertenecientes a Laura Dávila</p>
     </footer>
