--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comision B</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
                 <li><a href="./Contactos.html">Contactos</a></li>
                 <li><a href="./Horario.html">Horarios de contacto</a></li>
                 <li><a href="#sectionid">Direcciones</a></li>
-                <li>Blog</li>
+                <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
 
@@ -27,8 +28,17 @@
                     <section id="sectionid">
                          <h5>Los días feriados no trabajamos</h5>
                 </section>
-    <h1>Sistema Solar</h1> 
-    <h2>Los Planetas</h2>
+
+                <div><p>¡Me encanta CSS!</p></div>
+                <br>
+                
+                <Div class="azul"></Div>
+                <Div class="rojo"></Div>
+                <Div class="gris"></Div>
+                <Div class="verde"></Div>
+
+    <h1 class="h1">Sistema Solar</h1> 
+    <h2 class="milanesas">Los Planetas</h2>
     <h3>La Tierra</h3>
     <p>La Tierra es redonda</p>
     <img src="Planeta tierra.jpg"widght"="300"height"150"alt=El planeta tierra">
