--- a/Index.html
+++ b/Index.html
@@ -13,19 +13,17 @@
                 <li>Inicio</li>
                 <li><a href="./Contactos.html">Contactos</a></li>
                 <li><a href="./Horario.html">Horarios de contacto</a></li>
-                <li><a href="#sectionid">Direcciones</a></li>
+                <li><a href="#section_id">Direcciones</a></li>
                 <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
 
         </header>
                 <main>
-                    
-                    
-                    <section id="sectionid">
+                            <section id="section_id">
                         <h5>Travesera de Gracia 89, Ciudad Autónoma de Buenos Aires, Argentina</h5>
                         </section>
-                    <section id="sectionid">
+                    <section id="section_id">
                          <h5>Los días feriados no trabajamos</h5>
                 </section>
 
