--- a/Horario.html
+++ b/Horario.html
@@ -18,11 +18,22 @@
             </ul>
             </nav>
         </header>
-    <b class="dia1">Lunes: </b><i class="horarios1">8:00 a 13:00, </i>
-        <b class="dia2">Martes: </b><i class="horarios2">16:00 a 18:00, </i>
-            <b class="dia3">Miércoles: </b><i class="horarios3">8:00 a 13:00, </i>
-                <b class="dia4">Jueves: </b><i class="horarios4">16:00 a 18:00 y </i> 
-                    <b class="dia5">viernes: </b><i class="horarios5">16:00 a 18:00</i>
+        <Table border ="1">
+        <tr>
+            <td><b class="dia1"> Lunes </b></td>
+            <td><b class="dia2"> Martes </b></td>
+                <td><b class="dia3"> Miércoles </b></td>
+                <td><b class="dia4"> Jueves </b></td>
+                    <td><b class="dia5"> Viernes </b></td>
+                </tr>
+                <tr>
+                <td><i class="horarios1">8:00 a 13:00, </i></td>
+                <td><i class="horarios2">16:00 a 18:00, </i></td>
+                    <td><i class="horarios3">8:00 a 13:00, </i></td>
+                        <td><i class="horarios4">16:00 a 18:00 </i></td> 
+                            <td><i class="horarios5">16:00 a 18:00</i></td>
+                        </Table>
+                </tr>
           
     <footer>
         <p>Derechos de autor pertenecientes a Laura Dávila</p>
