tarea5. Agrego también cursiva y negrita en css

--- a/Contactos.html
+++ b/Contactos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,10 +13,11 @@
                 <li>Inicio</li>
                 <li><a href="./Contactos.html">Contactos</a></li>
                 <li><a href="./Horario.html">Horarios de contacto</a></li>
-                <li><a href="#sectionid">Direcciones</a></li>
-                <li>Blog</li>
+                <li><a href="#section_id">Direcciones</a></li>
+                <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
+
         </header>
                 <main>
                     <form action=""mehod="">
