--- a/Horario.html
+++ b/Horario.html
@@ -13,30 +13,31 @@
                 <li>Inicio</li>
                 <li><a href="./Contactos.html">Contactos</a></li>
                 <li><a href="./Horario.html">Horarios de contacto</a></li>
-                <li><a href="#sectionid">Direcciones</a></li>
-                <li>Blog</li>
+                <li><a href="#section_id">Direcciones</a></li>
+                <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
+
         </header>
         <Table border ="1">
         <tr>
-            <td><b class="dia1"> Lunes </b></td>
-            <td><b class="dia2"> Martes </b></td>
-                <td><b class="dia3"> Miércoles </b></td>
-                <td><b class="dia4"> Jueves </b></td>
-                    <td><b class="dia5"> Viernes </b></td>
+            <td class="dia1"> Lunes </td>
+            <td class="dia2"> Martes </td>
+                <td class="dia3"> Miércoles </td>
+                <td class="dia4"> Jueves </td>
+                    <td class="dia5"> Viernes </td>
                 </tr>
                 <tr>
-                <td><i class="horarios1">8:00 a 13:00, </i></td>
-                <td><i class="horarios2">16:00 a 18:00, </i></td>
-                    <td><i class="horarios3">8:00 a 13:00, </i></td>
-                        <td><i class="horarios4">16:00 a 18:00 </i></td> 
-                            <td><i class="horarios5">16:00 a 18:00</i></td>
+                <td class="horarios1">8:00 a 13:00, </i></td>
+                <td class="horarios2">16:00 a 18:00, </i></td>
+                    <td class="horarios3">8:00 a 13:00, </i></td>
+                        <td class="horarios4">16:00 a 18:00 </i></td> 
+                            <td class="horarios5">16:00 a 18:00</i></td>
                         </Table>
                 </tr>
           
-    <footer>
-        <p>Derechos de autor pertenecientes a Laura Dávila</p>
-    </footer>
+                <footer>
+                    <p>Derechos de autor pertenecientes a Laura Dávila</p>
+                </footer>
 </body>
 </html>
