--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li><a href="./Contactos.html">Contactos</a></li>
-                <li><a href="./Horario.html">Horarios de contacto</a></li>
-                <li><a href="#section_id">Direcciones</a></li>
+                <li class="Inicio">Inicio</li>
+                <li class="Contactos"><a href="./Contactos.html">Contactos</a></li>
+                <li class="Horarios de contacto"><a href="./Horario.html">Horarios de contacto</a></li>
+                <li class="Direcciones"><a href="#section_id">Direcciones</a></li>
                 <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
