clase 6: agrego al header y footer flex

--- a/Index.html
+++ b/Index.html
@@ -13,17 +13,18 @@
                 <li class="Inicio">Inicio</li>
                 <li class="Contactos"><a href="./Contactos.html">Contactos</a></li>
                 <li class="Horarios de contacto"><a href="./Horario.html">Horarios de contacto</a></li>
-                <li class="Direcciones"><a href="#section_id">Direcciones</a></li>
+                <li class="Direcciones"><a href="#section1">Direcciones</a></li>
                 <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
 
         </header>
                 <main>
-                            <section id="section_id">
+                        <section id="section1">
                         <h5>Travesera de Gracia 89, Ciudad Autónoma de Buenos Aires, Argentina</h5>
                         </section>
-                    <section id="section_id">
+
+                    <section id="section2">
                          <h5>Los días feriados no trabajamos</h5>
                 </section>
 
@@ -75,9 +76,9 @@
             </tr>
             <tr>
                 <td rowspan ="3">Clases</td>
-                <td>Crucero de pesca <img src="Crucero de pesca.jpg" width="50" height="50"></td>
-                <td>Velero <img src="velero.jpg" width="50" height="50"></td>
-                <td>Buque de carga general <img src="buque de carga general.jpg" width="50" height="50"></td>
+                <td>Crucero de pesca <img src="../Veleros/Crucero de pesca.jpg" width="50" height="50"></td>
+                <td>Velero <img src="../Veleros/velero.jpg" width="50" height="50"></td>
+                <td>Buque de carga general <img src="../Veleros/buque de carga general.jpg" width="50" height="50"></td>
             </tr>
             <tr>
                 <td><a href="https://www.cosasdebarcos.com/recursos/tipos-de-barcos-de-pesca/"> Catamarán</a></td>
@@ -107,6 +108,9 @@
 </main>
 <footer>
     <p>Derechos de autor pertenecientes a Laura Dávila</p>
+    <p>Instagram: Lbarcos</p>
+    <p>Teléfono de contacto: +54 11 66557788</p>
+    <img src="IMAGENES/Veleros/descarga.png" width="50" height="50">
 </footer>
 
 </body>
