--- a/Index.html
+++ b/Index.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comision B</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li class="Inicio">Inicio</li>
+                <section id="section1"></section>
+                <li class="Inicio"><a href="#section1">Inicio</a></li>
                 <li class="Contactos"><a href="./Contactos.html">Contactos</a></li>
                 <li class="Horarios de contacto"><a href="./Horario.html">Horarios de contacto</a></li>
-                <li class="Direcciones"><a href="#section1">Direcciones</a></li>
+                <li class="Direcciones"><a href="#section2">Direcciones</a></li>
                 <li style="color: red;"<font face="Arial"><font size=6>Blog</font></font></li>
             </ul>
             </nav>
-
+            
         </header>
                 <main>
-                        <section id="section1">
+                        <section id="section2">
                         <h5>Travesera de Gracia 89, Ciudad Autónoma de Buenos Aires, Argentina</h5>
                         </section>
 
-                    <section id="section2">
+                    <section id="section3">
                          <h5>Los días feriados no trabajamos</h5>
                 </section>
 
@@ -104,15 +106,48 @@
             </tr>    
         </table>  
 
-
+        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../3.jpg" class="d-block w-100" alt="messi">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 </main>
+<div class="contenedor">
+                <div>Uno</div>
+                <div>Dos</div>
+                <div>Tres</div>
+                <div>Cuatro</div>
+                <div>Cinco</div>
+                <button type="button" class="btn btn-secondary">Secondary</button>
+            </div>
+
+
+
+
+
 <footer>
     <p>Derechos de autor pertenecientes a Laura Dávila</p>
     <p>Instagram: Lbarcos</p>
     <p>Teléfono de contacto: +54 11 66557788</p>
     <img src="IMAGENES/Veleros/descarga.png" width="50" height="50">
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
