--- a/Contactos.html
+++ b/Contactos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -21,7 +22,7 @@
         </header>
                 <main>
                     <form action=""mehod="">
-                        Nombre: <input type="text" name="nombre" placeholder="Nombre">
+                        Nombre: <input type="text" name="nombre" placeholder="Nombre"> <button type="button" class="btn btn-primary">Anónimo</button>
                         <br>
                         Apellido: <input type="text" name=""apellido" placeholder="Apellido">
                         <br>
@@ -38,10 +39,20 @@
 
                         <input type="submit" value="enviar">
                         <input type="reset" value="cancelar">
+                        <button type="button" class="btn-close" aria-label="Close"></button>
+                        <div class="card" style="width: 18rem;">
+                            <img src="./tarjeta.jpg" class="card-img-top" alt="tarjeta">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Todas las tarjetas de crédito y débito permitidas</p>
+                              <a href="#" class="btn btn-primary">Pagar</a>
+                            </div>
+                          </div>
                         </form>
                 </main>
                 <footer>
                     <p>Derechos de autor pertenecientes a Laura Dávila</p>
                 </footer>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
